--- a/app/sass/inc/_vars.scss
+++ b/app/sass/inc/_vars.scss
@@ -6,7 +6,7 @@ $blue: #41A3E5;
 $green: #A6C20F;
 $darkgreen: #00A9B9;
 // fonts
-$mainFont: 'Montserrat', sans-serif;
+$mainFont: 'Arial', sans-serif;
 $secondaryFont: 'Inter', sans-serif;
 //
 
