--- a/app/sass/parts/sections/_hero_section.scss
+++ b/app/sass/parts/sections/_hero_section.scss
@@ -51,14 +51,16 @@
 
                 & .team-member-frame {
                     height: 50%;
-                    position: relative;
+                    position: absolute;
+                    width: 100%;
                     & .team-member-decor-triangle {
                         position: absolute;
                         width: 0;
                         height: 0;
-                        z-index: 1;
+                        z-index: 3;
                     }
                     &.team-member-frame--top {
+                        top: 0;
                         & .triangle-down {
                             border-left: 22px solid transparent;
                             border-right: 22px solid transparent;
@@ -83,6 +85,7 @@
                         }
                     }
                     &.team-member-frame--bottom {
+                        bottom: 0;
                         & .triangle-up {
                             border-left: 22px solid transparent;
                             border-right: 22px solid transparent;
@@ -109,8 +112,9 @@
                 }
 
                 & .team-member--portrait {
-                    position: absolute;
+                    position: relative;
                     padding: 1rem;
+                    z-index: 1;
                     & img {
                         border-radius: 16px;
                     }
@@ -121,6 +125,7 @@
             & .team-member--text-info {
                 color: #ffffff;
                 margin-bottom: 1.5rem;
+                padding-top: 1rem;
 
                 & .team-member--name {
                     color: #ffffff;
