created basic layout for about-us section

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -45,6 +45,7 @@ main {
 
 //parts
 @import 'parts/sections/hero_section';
+@import 'parts/sections/about_us_section';
 
 @import 'parts/seach_form';
 //footer
