--- a/app/sass/parts/sections/_about_us_section.scss
+++ b/app/sass/parts/sections/_about_us_section.scss
@@ -1,16 +1,57 @@
+/* About us section styles*/
+
+/* Mill animation */
+
+@keyframes rotate-animation {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .section-about-us {
     background-color: #FF97B3;
 
     & .row.section-about-us--row {
         display: flex;
         justify-content: space-between;
+        @include mq-inv-tablet {
+            flex-direction: column;
+        }
     }
 
     & .column--half-width {
         width: calc(50% - 1rem);
         margin-right: 1rem;
+        @include mq-inv-tablet {
+            width: 100%;
+            margin-bottom: 1rem;
+        }
+        &.column--with-animation {
+            padding-top: 261px;
+        }
         &:last-child {
             margin-right: 0;
+        }
+    }
+
+    & .about-us--animation-block-wrapper {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        & .about-us--img-mill-wings {
+            position: absolute;
+            background: url("../../img/mill-wings.svg");
+            background-size: cover;
+            top: -55%;
+            left: 2%;
+            animation: rotate-animation 10s infinite linear;
+            transform-origin: 161px 261px;
         }
     }
 
