--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -37,17 +37,19 @@ section {
 main {
 	position: relative;
 }
+
 //header & common
 @import 'parts/header';
 @import 'parts/section-title';
 @import 'parts/layout';
 
-
 //parts
 @import 'parts/sections/hero_section';
 @import 'parts/sections/about_us_section';
+@import 'parts/sections/contact_us_section';
 
 @import 'parts/seach_form';
+
 //footer
 @import 'parts/footer';
 
