--- a/app/fonts/stylesheet.css
+++ b/app/fonts/stylesheet.css
@@ -1,32 +1,23 @@
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-SemiBold.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: block;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Light.woff2') format('woff2');
+    font-family: 'Lato';
+    src: url('Lato-Light.woff2') format('woff2');
     font-weight: 300;
     font-style: normal;
     font-display: block;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Regular.woff2') format('woff2');
+    font-family: 'Lato';
+    src: url('Lato-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url('Montserrat-Bold.woff2') format('woff2');
+    font-family: 'Lato';
+    src: url('Lato-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
     font-display: block;
 }
-
